# CCBP_pub

./: .gitattributes  .gitignore  DEVELOPMENT.md  README.md  build_macos.sh  capcut_handler_old.py  compare_outputs.py  create_icns.sh  main.py  pyproject.toml  validate_engine.py
.github/workflows/: windows_build.yml
.specstory/: .project.json
.specstory/history/: 2025-04-12_09-02.md  2025-04-13_14-04.md  2025-04-14_03-33.md  2025-04-14_03-57-バッチプロジェクト生成のエラーと失敗.md  2025-04-14_03-57.md  2025-04-17_11-58-リモートブランチの切り替え.md  2025-04-23_14-14-フォルダのリネームと新規作成.md  2025-04-24_05-49-untitled.md  2025-04-24_05-54-エラー解消のサポート.md  2025-04-28_11-39-アプリケーションのログと設定管理.md  2025-04-28_11-56-バッチ処理のログ分析とトラブルシューティング.md  2025-04-29_02-39-現状把握の依頼.md  2025-04-29_04-41-ファイルパスの差し替え原因調査.md  2025-04-29_05-24-分析リクエスト.md  2025-05-01_02-27-パス問題の分析と解決.md  2025-05-01_04-23-続ける会話.md  2025-05-02_14-21-何についての質問.md
assets/ffmpeg/mac/: ffmpeg  ffprobe
assets/icons/: app.icns
ccbp/: logging_config.py
ccbp/config/: path_mapping_rules.json
ccbp/core/: batch_controller.py  batch_worker.py  capcut_handler.py  config_manager.py  crop_controller.py  crop_worker.py  file_system_handler.py  license_manager.py  settings_controller.py
ccbp/core/path_mapping_engine/: __init__.py  config.py  engine.py  exceptions.py  rules.py
ccbp/core/workers/: license_worker.py
ccbp/resources/help/: index.html
ccbp/resources/help/styles/: main.css
ccbp/ui/: batch_tab.py  crop_tab.py  help_view.py  main_window.py  settings_tab.py  styles.py
ccbp/utils/: config_manager.py  csv_handler.py  logging_config.py
(+3 files in other folders)
